--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="login">
+            <div id="imagem">
+                foto
+            </div>
+
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configgurações no seu ambiente.</p>
+                <form action="login.php" method="post">
+                    
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
