--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
-                Foto
-            </div>
+            <div id="imagem"></div>
 
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configgurações no seu ambiente.</p>
+                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post">
 
                 </form>
